<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Akun.detailAkun.PasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:text="@string/ganti_sandi"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center"
            />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_pass_lama"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"
        android:lineSpacingExtra="1.3sp"
        android:text="@string/kata_sandi_lama"
        />

    <EditText
        android:id="@+id/edt_pass_lama"
        android:layout_below="@+id/tv_edit_pass_lama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_pass_baru"
        android:layout_below="@+id/edt_pass_lama"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"
        android:lineSpacingExtra="1.3sp"
        android:text="@string/kata_sandi_baru"
        />

    <EditText
        android:id="@+id/edt_pass_baru"
        android:layout_below="@+id/tv_edit_pass_baru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_confirm_pass"
        android:layout_below="@+id/edt_pass_baru"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"
        android:lineSpacingExtra="1.3sp"
        android:text="@string/ketik_ulang_kata_sandi_baru"
        />

    <EditText
        android:id="@+id/edt_confirm_pass"
        android:layout_below="@+id/tv_edit_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btn_save_pass"
        android:layout_marginTop="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_border"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edt_confirm_pass"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/ubah" />

</RelativeLayout>