<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupBankSampahActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:text="@string/data_bank_sampah"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center"
            />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_keterangan"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="1.3sp"
        android:text="Masukkan data Bank Sampah secara benar dan jelas"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/layout_nama_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_keterangan"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layout_border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_domain"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_domain_black_24dp"/>

        <EditText
            android:id="@+id/et_nama_bank"
            android:layout_toRightOf="@+id/iv_domain"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="text"
            android:hint="@string/nama_bank_sampah"
            android:textSize="15sp"
            android:textColorHint="@color/warm_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_lokasi_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/layout_nama_bank"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layout_border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_pin_lokasi"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_pin_drop_black_24dp"/>

        <TextView
            android:id="@+id/tv_lokasi"
            android:layout_toRightOf="@+id/iv_pin_lokasi"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="text"
            android:hint="Alamat Bank Sampah"
            android:textColorHint="@color/warm_grey"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_data_sampah"
        android:layout_below="@+id/layout_lokasi_bank"
        android:background="@drawable/layout_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_kertas"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/flat_paper"/>

        <TextView
            android:id="@+id/tv_kertas"
            android:layout_toRightOf="@+id/iv_kertas"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/colorPrimaryDark"
            android:lineSpacingExtra="1.3sp"
            android:text="@string/kertas"
            />

        <CheckBox
            android:id="@+id/cb_kertas_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:buttonTint="@color/tree_green" />

        <ImageView
            android:id="@+id/iv_botol"
            android:layout_below="@+id/iv_kertas"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/flat_bottle"/>

        <TextView
            android:id="@+id/tv_botol"
            android:layout_below="@+id/tv_kertas"
            android:layout_toRightOf="@+id/iv_botol"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/colorPrimaryDark"
            android:lineSpacingExtra="1.3sp"
            android:text="@string/botol"
            />

        <CheckBox
            android:id="@+id/cb_botol_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:layout_alignTop="@+id/iv_botol"
            android:buttonTint="@color/tree_green" />

    </RelativeLayout>
    <Button
        android:id="@+id/btn_daftarkan_bank_sampah"
        android:layout_marginTop="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_border"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_data_sampah"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/daftarkan"/>

</RelativeLayout>