<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_gamon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="65dp"
        android:src="@drawable/gamon"/>

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/iv_gamon"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/brown_grey"
            android:textSize="15sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@+id/layout_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layout_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_https" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:hint="@string/kata_sandi"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/brown_grey"
            android:textSize="15sp"
            android:textStyle="normal" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_masuk"
        android:background="@drawable/button_gradient"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/masuk"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/dont_have_account"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="#808080"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text="Belum punya akun ? Daftar" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:textColor="@color/emerald_green"
            android:textSize="15sp"
            android:textStyle="normal"
            android:text=" disini." />
    </LinearLayout>
</RelativeLayout>